--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hxcpp 4.2.1 > /dev/null
-          haxelib git lime https://github.com/kittycathy233/lime --quiet
+          haxelib install lime 7.9.0
           haxelib install openfl 9.1.0
           haxelib --never install flixel 4.11.0
           haxelib run lime setup flixel
@@ -76,7 +76,7 @@ jobs:
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
           haxelib run lime config JAVA_HOME $JAVA_HOME
           haxelib run lime config ANDROID_SETUP true
-          haxelib set lime git
+          haxelib set lime 7.9.0
           haxelib set openfl 9.1.0
           haxelib set flixel 4.11.0
           haxelib set flixel-ui 2.4.0
