--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         uses: nttld/setup-ndk@main
         id: setup-ndk
         with:
-          ndk-version: r17c
+          ndk-version: r12e
 
       - name: Setup Java JDK
         uses: actions/setup-java@main
